# tedit

./: CMakeLists.txt  CNAME  file.txt
docs/: CNAME  index.html
src/: main.cc  tedit.cc
test/: eg_test.cc
